--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>A little about me!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,13 +23,29 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>
+                    I was born and raised in Ann Arbor, Michigan.
+                    <span>My roots are PURE Michigan!</span>
+                    I enjoy traveling because; when you travel, you learn, and learning is so much fun! 
+                    Seeing new things, smelling new things, and tasting things, what better way to learn!
+                </p>
             </div>
             <div class="div-2">
-                Div 2
+                <p> 
+                    My passion: <span>I LOVE music!</span>
+                    Honestly, music is my therapy. 
+                    Music is my motivation. 
+                    Soon I hope to start making music! 
+                    I love people, and the thought of people feeling good listening to a song I created seems pretty awesome! 
+
+                </p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>
+                    Fun fact, <span>as a true Michiganian</span>, learning how to drive in the snow is a must. 
+                    Yet every winter teaches me new techniques and skills to become a better and safer diver.
+                    The takeaway is that I am continuously learning. 
+                </p>
             </div>
         </section>    
 
