--- a/index.html
+++ b/index.html
@@ -21,34 +21,43 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
-                <p>
+        <section class="flex-container">
+            <header>
+                <h1>Hi. I'm Quinnin.</h1>
+            </header>
+            <main>
+                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, I can be found traveling, hiking and fishing!</p>
+           </main>
+            <div id="div-1" class="flex-items">
+                    <p>
                     I was born and raised in Ann Arbor, Michigan.
                     <span>My roots are PURE Michigan!</span>
                     I enjoy traveling because; when you travel, you learn, and learning is so much fun! 
                     Seeing new things, smelling new things, and tasting things, what better way to learn!
-                </p>
+                    </p>
             </div>
-            <div class="div-2">
-                <p> 
+            <div id="div-2" class="flex-items">
+                    <p> 
                     My passion: <span>I LOVE music!</span>
                     Honestly, music is my therapy. 
                     Music is my motivation. 
                     Soon I hope to start making music! 
-                    I love people, and the thought of people feeling good listening to a song I created seems pretty awesome! 
-
-                </p>
+                    I love people, and the thought of people feeling good listening to a song I created seems pretty awesome! </p>
             </div>
-            <div class="div-3">
-                <p>
+            <div id="div-3" class="flex-items">
+                    <p>
                     Fun fact, <span>as a true Michiganian</span>, learning how to drive in the snow is a must. 
                     Yet every winter teaches me new techniques and skills to become a better and safer diver.
                     The takeaway is that I am continuously learning. 
-                </p>
+                    </p>
             </div>
-        </section>    
-
+            <footer>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-pinterest"></i>
+            </footer>
+        </section>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
